Add accordion to the news

--- a/home.css
+++ b/home.css
@@ -92,3 +92,20 @@ input::-webkit-input-placeholder {
 .navbar-text{
     font-weight: bold;
 }
+
+
+/* .navbar{
+    margin-bottom: 2em;
+} */
+
+/* #owl-demo .owl-item div{
+    padding:5px;
+  }
+  #owl-demo .owl-item img{
+    display: block;
+    width: 100%;
+    height: auto;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+  } */
